Account for subpixel accumulation in pixel snapped border box size.

The subpixel accumulation can affect the pixel snapped border box size
of a paint layer. Take this into account when positioning or sizing for
this box's PaintLayer.

Bug: 692486
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I16f78d7105cd9e069d1de563ed81fd09245c1b35
Reviewed-on: https://chromium-review.googlesource.com/509175
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Reviewed-by: Chris harrelson <chrishtr@chromium.org>
Reviewed-by: Peter Mayo <petermayo@chromium.org>
Commit-Queue: Robert Flack <flackr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#476536}
Former-commit-id: b71f6a8eed67fb326ac00d673c810d0a053ad048