third_party/WebKit/Source/core/paint/PaintLayerScrollableArea.cpp
@@ -309,9 +309,11 @@ IntRect PaintLayerScrollableArea::ScrollCornerRect() const {
   bool has_vertical_bar = VerticalScrollbar();
   bool has_resizer = Box().Style()->Resize() != RESIZE_NONE;
   if ((has_horizontal_bar && has_vertical_bar) ||
-      (has_resizer && (has_horizontal_bar || has_vertical_bar)))
-    return CornerRect(Box(), HorizontalScrollbar(), VerticalScrollbar(),
-                      Box().PixelSnappedBorderBoxRect());
+      (has_resizer && (has_horizontal_bar || has_vertical_bar))) {
+    return CornerRect(
+        Box(), HorizontalScrollbar(), VerticalScrollbar(),
+        Box().PixelSnappedBorderBoxRect(Layer()->SubpixelAccumulation()));
+  }
   return IntRect();
 }
 
@@ -1156,7 +1158,8 @@ int PaintLayerScrollableArea::HorizontalScrollbarStart(int min_x) const {
   if (Box().ShouldPlaceBlockDirectionScrollbarOnLogicalLeft())
     x += HasVerticalScrollbar()
              ? VerticalScrollbar()->ScrollbarThickness()
-             : ResizerCornerRect(Box().PixelSnappedBorderBoxRect(),
+             : ResizerCornerRect(Box().PixelSnappedBorderBoxRect(
+                                     Layer()->SubpixelAccumulation()),
                                  kResizerForPointer)
                    .Width();
   return x;
@@ -1398,7 +1401,9 @@ void PaintLayerScrollableArea::PositionOverflowControls() {
   if (!HasScrollbar() && !Box().CanResize())
     return;
 
-  const IntRect border_box = Box().PixelSnappedBorderBoxRect();
+  const IntRect border_box =
+      Box().PixelSnappedBorderBoxRect(layer_.SubpixelAccumulation());
+
   if (Scrollbar* vertical_scrollbar = this->VerticalScrollbar())
     vertical_scrollbar->SetFrameRect(RectForVerticalScrollbar(border_box));
 
@@ -1454,8 +1459,9 @@ bool PaintLayerScrollableArea::HitTestOverflowControls(
 
   IntRect resize_control_rect;
   if (Box().Style()->Resize() != RESIZE_NONE) {
-    resize_control_rect = ResizerCornerRect(Box().PixelSnappedBorderBoxRect(),
-                                            kResizerForPointer);
+    resize_control_rect = ResizerCornerRect(
+        Box().PixelSnappedBorderBoxRect(Layer()->SubpixelAccumulation()),
+        kResizerForPointer);
     if (resize_control_rect.Contains(local_point))
       return true;
   }
@@ -1528,9 +1534,11 @@ IntRect PaintLayerScrollableArea::ResizerCornerRect(
 
 IntRect PaintLayerScrollableArea::ScrollCornerAndResizerRect() const {
   IntRect scroll_corner_and_resizer = ScrollCornerRect();
-  if (scroll_corner_and_resizer.IsEmpty())
+  if (scroll_corner_and_resizer.IsEmpty()) {
     scroll_corner_and_resizer = ResizerCornerRect(
-        Box().PixelSnappedBorderBoxRect(), kResizerForPointer);
+        Box().PixelSnappedBorderBoxRect(Layer()->SubpixelAccumulation()),
+        kResizerForPointer);
+  }
   return scroll_corner_and_resizer;
 }
 
